# g4ids

./: CADMesh_install.txt  CMakeLists.txt  CMakeLists.txt_OSX  GNUmakefile  README.md  g4ids.cc  g4ids_changelog.txt  geant4 compile.txt  geant4 installation.txt
Efficiency_tests_RL/: Clover_G4_eff.C  Makefile  Terminator.Dict.cc  Terminator.Dict.h  Terminator.hh  clover_g4_eff  run_RL.sh  tree2hist.C  tree2hist_LaBr3.C
Efficiency_tests_RL/efficiency/: Absolute_efficiency_ALL.root  Absolute_efficiency_G4.root  Relative_efficiency_G4.root  Resolution_G4.root
STL_export/Bucharest_Chamber/: Bucharest_Chamber_IS530_capac_leon.stl
STL_export/Bucharest_Plastic/: Bucharest_Plastic.stl  Bucharest_Plastic_back.stl  Bucharest_Plastic_holders.stl  Tape.stl
STL_export/Bucharest_VetoPlastic/: VETOPLASTIC.stl
STL_export/Clover_Bucharest/: Clover_Assembly_Bucharest_Clod_Finger_Pipe_6.stl  Clover_Assembly_Bucharest_Crystal2_1.stl  Clover_Assembly_Bucharest_Crystal2_2.stl  Clover_Assembly_Bucharest_Crystal2_3.stl  (+2 more)
include/: CloverSingleBuchTrackingAction.hh  CloverSingleTrackingAction.hh  FastPlasticDetector.hh  FastPlasticHit.hh  FastPlasticSD.hh  FastPlasticTrackingAction.hh  FrontPlasticKUDetector.hh  FrontPlasticKUHit.hh  FrontPlasticKUSD.hh  FrontPlasticKUTrackingAction.hh  G4IDSCounter.hh  G4IDSDetectorConstruction.hh  G4IDSEventAction.hh  G4IDSPrimaryGeneratorAction.hh  LaBr3Detector.hh  LaBr3Hit.hh  LaBr3SensitiveDetector.hh  LaBr3SteppingVerbose.hh  LaBr3TrackingAction.hh  LeftPlasticKUDetector.hh  LeftPlasticKUHit.hh  LeftPlasticKUSD.hh  LeftPlasticKUTrackingAction.hh  PhysicsList.hh  RightPlasticKUDetector.hh  RightPlasticKUHit.hh  RightPlasticKUSD.hh  RightPlasticKUTrackingAction.hh  TPiece.hh  VetoPlasticDetector.hh  VetoPlasticHit.hh  VetoPlasticSD.hh  VetoPlasticTrackingAction.hh  read_config.hh  tndge_DetectorConstruction.hh  tndge_SteppingVerbose.hh  tndge_TrackerHit.hh  tndge_TrackerSD.hh  tndge_TrackingAction.hh
macros/: gui.mac  is530_old.cc  root2ascii_old.C  script.cc  script_histo2file.cc  tree2hist.C  tree2hist2ascii.C  vrml.mac
src/: CloverQuadDetector.cc  CloverSingleBuchDetector.cc  CloverSingleBuchHit.cc  CloverSingleBuchSD.cc  CloverSingleBuchTrackingAction.cc  CloverSingleHit.cc  CloverSingleSD.cc  CloverSingleTrackingAction.cc  Cubic_Chamber.cc  FastPlasticDetector.cc  FastPlasticHit.cc  FastPlasticSD.cc  FastPlasticTrackingAction.cc  FrontPlasticKUDetector.cc  FrontPlasticKUHit.cc  FrontPlasticKUSD.cc  FrontPlasticKUTrackingAction.cc  G4IDSCounter.cc  G4IDSDetectorConstruction.cc  G4IDSEventAction.cc  G4IDSPrimaryGeneratorAction.cc  IS530_Chamber.cc  LaBr3Detector.cc  LaBr3Hit.cc  LaBr3SensitiveDetector.cc  LaBr3TrackingAction.cc  LeftPlasticKUDetector.cc  LeftPlasticKUHit.cc  LeftPlasticKUSD.cc  LeftPlasticKUTrackingAction.cc  PhysicsList.cc  Polyhedron.cc  RightPlasticKUDetector.cc  RightPlasticKUHit.cc  RightPlasticKUSD.cc  RightPlasticKUTrackingAction.cc  TPiece.cc  VetoPlasticDetector.cc  VetoPlasticHit.cc  VetoPlasticSD.cc  (+1 more)
(+233 files in other folders)
